resolved spacing issue

--- a/resources/css/SQindex2.css
+++ b/resources/css/SQindex2.css
@@ -6,7 +6,7 @@ html {
   }
   
   
-  .center {
+  .center-y-axis {
     text-align: center;
   }
   
